# aIR

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/images/: README.md
samples/: demo_boot_session.csv
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/import/: mod.rs
src/components/: CellDetailModal.tsx  ColumnChooser.tsx  ConditionalFormatPanel.tsx  ContextMenu.tsx  DagMappingDialog.tsx  DagTrajectoryPanel.tsx  DataGrid.tsx  ExploreGraphShell.tsx  FilterEditor.tsx  GraphExportMenu.tsx  HistogramPanel.tsx  MenuBar.tsx  MindMapPanel.tsx  MindMappingDialog.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx
src/lib/: dag.ts  exploreGraph.ts  filters.ts  graphExport.ts  mindMap.ts  timestamp.ts  types.ts
src/stores/: settingsStore.ts  tabsStore.ts
