[package]
name = "artifactgrid"
version = "0.1.0"
description = "ArtifactGrid — A Hyper Timeline Tool for DFIR"
authors = ["ArtifactGrid Contributors"]
edition = "2021"

[lib]
name = "artifactgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22.1"
